Update database to save preference when user signed in and questionnaire completed